    %if;(count = length) tests if the current child is the last of
    the family).
  - [18 Feb 01] Added a template file for update person form (updind.txt),
    which is now user-configurable.
  - [10 Feb 01] For the perso.txt template file, added the variables
    %father_age_at_birth; and %mother_age_at_birth;

* Gedcom to GeneWeb (ged2gwb)
  - [03 Mar 01] In case of program failure, the message is displayed
    in standard output or in the log file. It is therefore visible
    in the "traces of the last command" of gwsetup.

* Lexicon (lang/lexicon.txt) and Welcome pages (lang/*/start.txt)
  - [07 Mar 01] The "advanced request" which works too bad, is no more
    proposed in welcome pages. To have it again, you have to set the
    variable "hide_advanced_request" to "no" in the base configuration
    file.
  - [01 Mar 01] For translators: in "person/persons" phrase, it is now
    possible to add a third field to say how to translate "persons" when
    it is after a number (e.g. 50 persons). Example with Estonian.
  - [01 Mar 01] Added entry "on (weekday day month year)" for the
    anniversary page sentence: "today, weekday day month year, etc".
    Necessary at least for Finnish and Estonian.
  - [19 Feb 01] Updated several lexicon entries in Estonian (Hanno
    Kuus)
  - [16 Feb 01] In all welcome pages, suppressed the text "or surname" in
    the first choice of the first case. But it goes on searching up by
    surname, if no complete name is found.

* Base configuration files (base.gwf)
  - [01 Mar 00] The variable "always_surname" now applies also to pages
    displaying surnames by branch (no more only to descendants pages).

* Setup program (gwsetup)
  - [24 Feb 01] Fixed big bug: when creating a data base, a page
    displays that the data base has been created. Ok. But if this page is
    requested again later by the browser and if it is no more in the
    browser cache, the action is made again overwriting the possible user
    changes.